# LilyGO-agenda-meetingroom

./: .clang-format  .gitignore  README.md  esp32_partition_app4032k_spiffs8M.csv  platformio.ini
boards/: lilygo_t5_47.json
docs/: index.html
google_scrips/: create_events.gs  get_agenda_events.gs
lib/HTTPSRedirect/: keywords.txt  library.json
lib/HTTPSRedirect/src/: DebugMacros.h  HTTPSRedirect.cpp  HTTPSRedirect.h
outlook_to_gmail/: .pdm.toml  LICENSE  config_sample.py  cronjob.txt  outlook_to_google.py  pyproject.toml  requirements.txt  run.sh
outlook_to_gmail/credentials/: quickstart.py
outlook_to_google/: Dockerfile  cronjob.txt  outlook_to_google.py  requirements.txt
outlook_to_google/credentials/: quickstart.py
src/: agenda_record.h  main_calandar.ino  owm_credentials.h
