[project]
name = "martijn van Wezel"
version = "V1.0.6"
description = "Converting from MS Calendar to Gmail."
authors = [
    {name = "martijn", email = "martijnvwezel@muino.nl"},
]
dependencies = [
    "O365>=2.0.19",
    "google-api-python-client>=2.49.0",
    "google-auth-httplib2>=0.1.0",
    "google-auth-oauthlib>=0.5.1",
    "beautifulsoup4>=4.11.1",
    "pytz>=2022.1",
]
requires-python = ">=3.9"
license = {text = "MIT"}
[project.optional-dependencies]

[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "flake8>=4.0.1",
]

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"
